--- a/admin/view_drivers.html
+++ b/admin/view_drivers.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/color_skins.css">
     <script type="text/javascript" src="assets/js/pages/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="assets/js/pages/admin-admins.js"></script>
+    <script type="text/javascript" src="assets/js/pages/admin-drivers.js"></script>
 </head>
 
 <body class="theme-orange">
@@ -197,8 +197,6 @@
         </div>
         <!-- #Menu -->
     </aside>
-
-<!-- Chat-launcher -->
 <div class="chat-launcher"></div>
 <div class="chat-wrapper">
 <div class="card">
@@ -245,7 +243,7 @@
 
 <section class="content contact">
     <div class="container-fluid">
-        <ul class="list-unstyled" id="clientlist">
+        <ul class="list-unstyled" id="driverlist">
         </ul>
         <ul class="pagination">
             <li class="page-item"><a class="page-link" href="contact.html#">Previous</a></li>
