--- a/admin/create_agent.html
+++ b/admin/create_agent.html
@@ -163,7 +163,9 @@
                     <li><a href="create_user.html">Create Clients</a> </li>
                     <li><a href="contact_admin.html">View Admins</a></li>
                     <li><a href="create_agent.html">Create Admins</a></li>
-                    <li><a href="form-upload.html">File Upload</a></li>
+                    <li><a href="view_drivers.html">View Drivers</a></li>
+                    <li><a href="create_driver.html">Create Drivers</a> </li>
+                    <!--<li><a href="form-upload.html">File Upload</a></li>-->
                 </ul>
             </li>
             <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Reports</span> </a>
