--- a/admin/create_user.html
+++ b/admin/create_user.html
@@ -163,6 +163,86 @@
                     <li><a href="create_user.html">Create Clients</a> </li>
                     <li><a href="contact_admin.html">View Admins</a></li>
                     <li><a href="create_agent.html">Create Admins</a></li>
+                    <li><a href="view_drivers.html">View Drivers</a></li>
+                    <li><a href="create_driver.html">Create Drivers</a> </li>
+                    <!--<li><a href="form-upload.html">File Upload</a></li>-->
+                </ul>
+            </li>
+            <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Reports</span> </a>
+                <ul class="ml-menu">
+                    <li> <a href="vreport.html">View Report</a> </li>
+
+                </ul>
+            </li>
+
+            <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-money"></i><span>Payments</span> </a>
+                <ul class="ml-menu">
+
+                    <li><a href="wallet.html">Wallet</a></li>
+                    <li><a href="billing.html">Billing</a></li>
+
+                </ul>
+            </li>
+
+
+
+
+
+        </ul>
+    </div>
+    <!-- #Menu -->
+</aside>
+    <!-- User Info -->
+    <div class="user-info">
+        <div class="image">
+            <img src="assets/images/xs/avatar1.jpg" width="48" height="48" alt="User" />
+        </div>
+        <div class="info-container">
+            <div class="name" data-toggle="dropdown" id="username">John Doe</div>
+            <div class="btn-group user-helper-dropdown">
+                <i class="material-icons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" role="button"> keyboard_arrow_down </i>
+                <ul class="dropdown-menu slideUp">
+                    <li><a href="profile.html"><i class="material-icons">person</i>Profile</a></li>
+                    <li class="divider"></li>
+                    <li><a href="sign-in.html"><i class="material-icons">input</i>Sign Out</a></li>
+                </ul>
+            </div>
+            <div class="email" id="useremail">john.doe@example.com</div>
+        </div>
+    </div>
+    <!-- #User Info -->
+    <!-- Menu -->
+    <div class="menu">
+        <ul class="list">
+            <li class="header">MAIN NAVIGATION</li>
+            <li class="active"> <a href="index.html"><i class="zmdi zmdi-home"></i><span>Dashboard</span></a>
+
+            </li>
+
+            <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-shopping-cart"></i><span>Ticket</span> </a>
+                <ul class="ml-menu">
+
+                    <li> <a href="vticket.html">View Ticket</a></li>
+                    <li><a href="ticket_timeline.html">Tickect Timeline</a></li>
+
+                </ul>
+            </li>
+            <li> <a href="pickup.html" class="menu-toggle"><i class="zmdi zmdi-car"></i><span>Assign Pick-Ups</span> </a></li>
+
+            <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-home"></i><span>Property</span> </a>
+                <ul class="ml-menu">
+                    <li> <a href="vproperty.html">View Property</a></li>
+                    <li> <a href="add_property.html">Add Property</a></li>
+                    <li> <a href="add_property_grp.html">Add Property Group</a></li>
+                    <li> <a href="view_property_grp.html">View Property Groups</a></li>
+                </ul>
+            </li>
+            <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-accounts"></i><span>Users/Admins</span> </a>
+                <ul class="ml-menu">
+                    <li><a href="contact.html">View Clients</a></li>
+                    <li><a href="create_user.html">Create Clients</a> </li>
+                    <li><a href="contact_admin.html">View Admins</a></li>
+                    <li><a href="create_agent.html">Create Admins</a></li>
                     <li><a href="form-upload.html">File Upload</a></li>
                 </ul>
             </li>
