--- a/user/index.html
+++ b/user/index.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" href="assets/css/color_skins.css">
 <script type="text/javascript" src="assets/js/pages/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="assets/js/pages/user-index.js"></script>
+	<script type="text/javascript" src="assets/js/pages/user-wallet.js"></script>
 </head>
 
 <body class="theme-cyan index2">
@@ -538,7 +539,7 @@
             <div class="col-lg-3 col-sm-6 col-md-6 col-xs-12">
                 <div class="card">
                     <div class="body">
-                        <h3 >$ 14,500</h3>
+                        <h3 id="totalspent">$ 14,500</h3>
                         <p class="text-muted">Total Amount Billed</p>
                         <div class="progress">
                             <div class="progress-bar l-amber" role="progressbar" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100" style="width: 68%;"></div>
