--- a/user/atwallet.html
+++ b/user/atwallet.html
@@ -242,6 +242,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="card">
                     <div class="body">
+                        <!--modified to talk to paystack API -->
                         <form>
                           <div class="form-group form-float">
 
