now talking to the script that deducts money from the wallet and make sure you dont create a ticket when you re low on cash

--- a/user/cuticket.html
+++ b/user/cuticket.html
@@ -531,6 +531,7 @@
                         </ul>
                     </div>
                     <div class="body">
+                        <!--on submission of form, we deduct the selected amount from the wallet-->
                         <form id="create_ticket" method="POST" action="api/client/createticket">
                             <div class="form-group form-float">
                                 <div class="form-line">
