complete activation of wallet with all features

--- a/user/uvwallet.html
+++ b/user/uvwallet.html
@@ -509,6 +509,7 @@
                         </div>
                         <hr>
                         <div class="row">
+                            <!--activated completely-->
                             <div class="col-4">
                                 <h5 id="walletbalance">No Money</h5>
                                 <small>Balance</small>
